--- a/public/index.html
+++ b/public/index.html
@@ -13,5 +13,9 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+
+    <script src="//cdn.133.cn/ticket/h5/lib/es6-shim/es6-shim.min.js"></script>
+    <script src="//cdn.133.cn/ticket/h5/lib/vue@2.5.16/dist/vue.min.js"></script>
+    <script src="//cdn.133.cn/ticket/h5/lib/vue-router@3.0.1/dist/vue-router.min.js"></script>
   </body>
 </html>
