--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,10 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <!-- <script src="https://cdn.bootcss.com/vue/2.6.6/vue.min.js"></script>
+    <script src="https://cdn.bootcss.com/vue-router/3.0.1/vue-router.min.js"></script> -->
 
-    <script src="//cdn.133.cn/ticket/h5/lib/es6-shim/es6-shim.min.js"></script>
-    <script src="//cdn.133.cn/ticket/h5/lib/vue@2.5.16/dist/vue.min.js"></script>
-    <script src="//cdn.133.cn/ticket/h5/lib/vue-router@3.0.1/dist/vue-router.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.6/dist/vue.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue-router@3.0.1/dist/vue-router.min.js"></script>
   </body>
 </html>
